Replace etcd4j with custom implementation
The etcd4j client consumed too much resources when active (more than 20 threads). Since we need to reduce the footprint to the minumum I have implemented e simplified read only etcd client